--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ p {
     display: flex;
     width: 100%;
     background-image: url("images/bg.jpg");
+    background-size: cover;
 }
 
 .bg_text {
@@ -116,7 +117,7 @@ p {
 .text_about_me {
     height: 50%;
     width: 700px;
-    min-width: 700px;
+    min-width: 350px;
     display: flex;
     font-size: 24px;
     margin-left: 40px;
