--- a/style.css
+++ b/style.css
@@ -116,8 +116,21 @@ p {
     height: 300px;
 }
 
+span {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+}
+
+.div_about_text {
+    margin-left: 10px;
+}
+
 .text_about_me {
-    height: 50%;
+    background-color: white;
+    border-radius: 10px;
+    border: 2px solid gray;
+    height: 40%;
     width: 700px;
     min-width: 350px;
     display: flex;
@@ -133,7 +146,7 @@ p {
 .h2_about_me {
     font-size: 44px;
     margin: 0;
-    line-height: 2;
+    line-height: 1.6;
     padding-left: 30px;
 }
 
