--- a/style.css
+++ b/style.css
@@ -117,9 +117,9 @@ p {
 }
 
 span {
-    width: 100%;
+    width: 800px;
     height: 2px;
-    background-color: black;
+    background-color: gray;
 }
 
 .div_about_text {
@@ -127,6 +127,8 @@ span {
 }
 
 .text_about_me {
+    align-items: center;
+    overflow: hidden;
     background-color: white;
     border-radius: 10px;
     border: 2px solid gray;
@@ -145,9 +147,11 @@ span {
 
 .h2_about_me {
     font-size: 44px;
+    letter-spacing: 10px;
     margin: 0;
     line-height: 1.6;
     padding-left: 30px;
+    text-transform: uppercase;
 }
 
 .portfolio {
@@ -169,6 +173,7 @@ span {
 }
 
 .portfolio_h2 {
+    letter-spacing: 10px;
     margin: 0;
     font-size: 48px;
 }
