--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
     min-width: 600px;
 }
 
+button[data-button-exit]:active {
+    color: #404040;
+    transition: 200ms;
+}
+
 a {
     text-decoration: none;
 }
@@ -79,7 +84,6 @@ p {
     background-color: inherit;
     border: none;
     outline: none;
-    cursor: pointer;
     font-size: 25px;
 }
 
@@ -287,7 +291,7 @@ span {
 }
 
 .image_group button:active {
-	background-color: #323232;
+	background-color: #404040;
 	transition: 200ms;
 }
 
@@ -325,7 +329,6 @@ span {
     margin: 0 10px;
     height: 64px;
     width: 64px;
-    cursor: pointer;
 }
 
 .a_contacts {
@@ -338,7 +341,7 @@ span {
 }
 
 .div_footer {
-    height: 125px;
+    height: 275px;
     background: #070707;
     display: flex;
     flex-direction: column;
