--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ p {
     transition: 400ms;
 }
 
+.time {
+    transition: 0ms;
+}
+
 .div_portfolio_text {
     position: fixed;
     top: 50%;
@@ -136,6 +140,20 @@ p {
     pointer-events: none;
 }
 
+.navigation_burger {
+    background: rgba(7, 7, 7, 0.9);
+    position: fixed;
+    display: flex;
+    right: 0;
+    opacity: 0;
+    pointer-events: none;
+    top: 85px;
+    height: 100%;
+    width: 0;
+    z-index: 2;
+    transition: 200ms;
+}
+
 .burger,
 .burger::before,
 .burger::after {
@@ -158,7 +176,63 @@ p {
 
 #\#burger {
     opacity: 0;
-    position: absolute;
+    position: fixed;
+}
+
+#\#burger:checked ~ nav label span::before {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+#\#burger:checked ~ nav label span {
+    transform: rotate(45deg);
+}
+
+#\#burger:checked ~ nav label span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+#\#burger ~ nav label span,
+#\#burger:checked ~ nav label span::after,
+#\#burger:checked ~ nav label span::before {
+    transition: 200ms;
+}
+
+#\#burger:checked ~ .navigation_burger {
+    opacity: 1;
+    pointer-events: initial;
+    width: 200px;
+}
+
+.list_ul_burger {
+    justify-content: flex-start;
+    list-style: none;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.a_header_burger {
+    color: #cdcdcd;
+}
+
+.a_header_burger:hover {
+    background-color: #cdcdcd;
+    color: #1a1a1a;
+    transition: all 400ms ease;
+}
+
+.li_items_burger {
+    justify-content: center;
+    display: flex;
+    padding: 10px 0;
+    font-size: 20px;
+    color: inherit;
+    height: 100%;
 }
 
 .list_ul {
@@ -428,6 +502,7 @@ span {
         opacity: 0;
         pointer-events: none;
     }
+
     .div_burger {
         pointer-events: initial;
         opacity: 1;
